Thu Jun 17 19:44:59 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:

          Added OpenDDS-Bench entry for point release.

Thu Jun 17 15:51:26 UTC 2010  Don Hudson <hudsond@ociweb.com>

        * dds/DCPS/Definitions.h:

          Corrected constructor of SequenceNumber to modulo by SHRT_MAX + 1 as SHRT_MAX is a valid SequenceNumber.

Thu Jun 17 15:41:41 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Fixed a typo in command-line argument processing.  Thanks to Shawn
          Mitchell <shawn dot mitchell at Q1Labs dot com> for reporting it.

Wed Jun 16 06:25:37 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:

          Fixed threading issue for internal state setting which causes
          access violation during shutdown.

Tue Jun 15 19:35:29 UTC 2010  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Removed support for IP_MULTICAST_LOOP as it isn't supported by TAO 1.5 and it
          isn't a required feature for OpenDDS multicast.

Tue Jun 15 17:01:42 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:

          Fixed a warning.

Tue Jun 15 16:52:06 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:

          Fixed a deadlock situation during shutdown. One thread calls
          the timer cancellation while the reactor thread handling timeout.
          The DataLinkWatchdog internal lock and reactor lock are acquired
          reversely. Added reverse lock to solve the issue.

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          - Set send_naks_ flag based on active/passive role of the session
            instead of setting upon send_syn() call and not schedule nak timer
            if session is for pub.